SSDM 0.1.9010 uncertainties stack bug catch in try
              load_var with only folder path debug @Dimitri_Justeau
              load_var parameter: factors -> categorical @Dimitri_Justeau
              Presence / absence occurrences modelling @Robin_Pouteau
SSDM 0.1.9009 Stacking Algo. Corr. row names duplicate (strsplit)
              Duplicated '.tif' in load_occ doc @Dimitri_Justeau
              Null supported by Spcol (default) in .checkargs @Dimitri_Justeau
SSDM 0.1.9008 Windows gui data input fix (default switch)
SSDM 0.1.9007 load_occ porr data load improvement (occ not in spatial extent + less than 3 occ)
SSDM 0.1.9006 ShinyApp structure in inst and shinyFiles working
SSDM 0.1.9005 All inputs changed with shinyFiles package + Pcol text + Description (gui and pkg doc)
SSDM 0.1.9004 Previous model input change (windows comptibilty)

SSDM 0.1.0
--------------------------------------------------------------------------------

Initial private beta release!